--- a/3 Stile - Product Landing Page/index.html
+++ b/3 Stile - Product Landing Page/index.html
@@ -57,7 +57,7 @@
             <h2>$230</h2>
             <div class="info-btns">
               <a href="#" class="btn discover-btn">DISCOVER</a>
-              <a href="#" class="btn discover-btn">ADD TO CART</a>
+              <a href="#" class="btn cart-btn">ADD TO CART</a>
             </div>
           </div>
         </div>
