Add images and icons

--- a/3 Stile - Product Landing Page/index.html
+++ b/3 Stile - Product Landing Page/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width="device-width, initial-scale=1">
     <meta charset="UTF-8" />
     <title>Adidas</title>
-    <link
-      rel="stylesheet"
-      href="https://fontawesome.com/releases/v5.7.1/css/all.css"
-    />
+    <script src="https://kit.fontawesome.com/6a5748b709.js"></script>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -42,7 +39,7 @@
               <a href="#"><i class="fas fa-user"></i>Account</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-cart"></i>Cart</a>
+              <a href="#"><i class="fas fa-cart-arrow-down"></i>Cart</a>
             </li>
           </ul>
         </div>
